--- a/src/app/components/hero-detail/hero-detail.component.html
+++ b/src/app/components/hero-detail/hero-detail.component.html
@@ -7,4 +7,5 @@
         <input id="hero-name"
          [(ngModel)]="hero.name" placeholder="name" />
       </div>
+      <button (click)="goBack()">go back</button>
     </div>
